refactor: 게시물, 북마크 조회 관련 쿼리 최적화 (#193)
* fix: merge 충돌 이슈 수정

* refactor: post 조회 쿼리 최적화

* refactor: bookmark 조회 쿼리 최적화

* refactor: bookmark 엔티티 리팩토링

* refactor: Post 내 중복 필드 Embedded 타입으로 대체

* refactor: JobBoard 내 중복 필드 Embedded 타입으로 대체

* test: Post, JobBoard 엔티티 수정으로 인한 테스트코드 수정

* refactor: Reply, Comment 엔티티의 공통 필드 Embedded 처리

* refactor: 게시물 과 구인구직 Bookmark 등록/조회 시 쿼리 최적화

* test: Bookmark 엔티티 수정으로 인한 테스트코드 수정